# nRF52_SoilSensor

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  ble_cus.c  ble_services.c  gcc_nrf52.ld  i2c.c  main.c  pwm.c  sdk_config.h  storage.c  timers.c
bsp/: custom_board.h
design/case/: README.MD  plant_sensor_bottom.stl  plant_sensor_top.stl
include/: ble_cus.h  ble_services.h  i2c.h  pwm.h  storage.h  timers.h
sensors/: bat_sensor.c  ec_sensor.c  isl29035.c  light_sensor.c  opt3001.c  sensors.c  shtc3.c  soil_sensor.c
sensors/include/: bat_sensor.h  ec_sensor.h  isl29035.h  light_sensor.h  opt3001.h  sensors.h  shtc3.h  soil_sensor.h
